--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 								<p>「數字油畫」：右邊那幅是半成品<BR><img src="../clairex0714.github.io/images/DIY-DP1.jpg" width="300" height="200" alt="" /> <img src="../clairex0714.github.io/images/DIY-DP2.jpg" width="300" height="200" alt="" /> </p>
 									
 								<P>「鑽石畫」：<br><img src="../clairex0714.github.io/images/DIY-DD1.jpg" width="230" height="300" alt="" /> <img src="../clairex0714.github.io/images/DIY-DD2.jpg" width="420" height="300" alt="" /> </P>
+								<P>「鑽石畫」：<br><img src="../clairex0714.github.io/images/DIY-DD1.jpg" width="230" height="300" alt="" /> <img src="../clairex0714.github.io/images/DIY-DD2.jpg" width="420" height="300" alt="" /> </P>
 								<P>「刺繡」、［十字繡」：<br>
 									<img src="../clairex0714.github.io/images/DIY-E1.jpg" width="200" height="200" alt="" /> <img src="../clairex0714.github.io/images/DIY-E2.jpg" width="200" height="200" alt="" /> <img src="../clairex0714.github.io/images/DIY-E3.jpg" width="200" height="200" alt="" /> <img src="../clairex0714.github.io/images/DIY-E4.jpg" width="200" height="200" alt="" /> </P>
 							</article>
