--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								<h2 class="major">我的興趣</h2>
 								<span class="image main"><img src="../clairex0714.github.io/images/LOVE.jpg" alt="" /></span>
 								
-								<table>
+								<table width="100%" style="table-layout:fixed">
 									<p>目前看小說居多，其他活動相對較少</p>
 									<tr>
 										<td>一、DIY手工藝</td>
@@ -61,7 +61,8 @@
 										<td>三、看小說、漫畫</td>
 										<td>四、購物比價</td>
 									</tr>
-									<tr><td>1.毛線編織<BR>2.鑽石畫<BR>3.數字油畫<BR>4.十字繡<BR>5.水霧魔珠<BR>6.水晶滴膠<BR>7.拼拼豆豆</td><td>每年都會跟朋友<BR>相約著去KTV唱歌<BR>或是與高職同學約著<BR><BR>像是：<BR>好樂迪<BR>享溫馨<BR><BR>以前也會跟著父親<BR>去小吃部or釣蝦場唱歌</td><td>從14.5歲至今，<BR>看的書<BR>已經不下千本，<BR>從十萬字左右<BR>到數百萬字的<BR>都看過。<BR><BR>言情、武俠、都市、仙俠<BR>奇幻、末世、靈異、重生<BR>穿越、系統、奶爸......等<BR>都追過</td><td>為了省錢<BR>需要買特定物品<BR>會在各購物網站比價<BR>或是從國外進口<BR>(喜歡到處比價，<BR>除了找便宜的物品之外<BR>更可以看到各種新鮮物品)<BR><BR>例如：<BR>PC24、奇摩購物、蝦皮<BR>MOMO、東森、森森<BR>淘寶、拚多多、京東</td>
+									<tr><td>1.毛線編織<BR>2.鑽石畫<BR>3.數字油畫<BR>4.十字繡<BR>5.水霧魔珠<BR>6.水晶滴膠<BR>7.拼拼豆豆</td>
+									<td>每年都會跟朋友，相約著去KTV唱歌，或是與高職同學約著<BR><BR>像是：<BR>好樂迪<BR>享溫馨<BR><BR>以前也會跟著父親，去小吃部or釣蝦場唱歌</td><td>從14.5歲至今，看的書已經不下千本，從十萬字左右，到數百萬字的 都看過。<BR><BR>言情、武俠、都市、仙俠、奇幻、末世、靈異、重生、穿越、系統、奶爸......等<BR><BR>都追過</td><td>為了省錢，需要買特定物品，就會在各購物網站比價，或從國外進口。<BR>(喜歡到處比價，除了找便宜的物品之外，更是因為可以看到各種新鮮物品)<BR><BR>購物網站，例如：<BR>PC24、奇摩購物、蝦皮、MOMO、東森、森森、淘寶、拚多多、京東</td>
 									
 									</tr>
 								</table>
